// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`карточка: status === OK: если есть значение, вернет правильный результат 1`] = `
Object {
  "key": "Дешевеет на 20% в год",
}
`;

exports[`карточка: status === undefined: вернет правильный результат 1`] = `
Object {
  "key": "Цена в зависимости от возраста",
}
`;

exports[`отчет: status === ERROR: вернет флаг для удаления данных 1`] = `
Object {
  "field": "cheapening_graph",
  "status": "REMOVE",
}
`;

exports[`отчет: status === OK: если есть значение, вернет правильный результат 1`] = `
Object {
  "key": "Цена в зависимости от возраста",
  "value": "Дешевеет на 20% в год",
}
`;

exports[`отчет: status === OK: если нет значения, вернет флаг для удаления данных 1`] = `
Object {
  "field": "cheapening_graph",
  "status": "REMOVE",
}
`;

exports[`отчет: status === undefined: вернет правильный результат 1`] = `
Object {
  "key": "Цена в зависимости от возраста",
  "value": "",
}
`;
